@@ -18,6 +18,8 @@
 - ADD: Implement a "Delete" command in the context menu of 
        the commit dialog for unversioned files. (Stefan)
 - ADD: TortoiseMerge can now handle UTF8 files. (Stefan)
+- ADD: Selecting of lines and copying them to the
+       clipboard in TortoiseMerge. (Stefan)
 - CHG: The log message editboxes now do "soft-wrap",
        i.e. the logmessage is wrapped at the right
        end of the dialog box. (Stefan)
